--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -2,13 +2,17 @@
 
 <form action="/auth/signup" method="POST" id="form-container">
   <label for="username">Username</label>
-  <input id="username" type="text" name="username" placeholder="JonSnow">
+  <input id="username" type="text" name="username" placeholder="Username">
 
   <br><br>
 
   <label for="password">Password</label>
-  <input id="password" type="password" name="password" placeholder="Your password">
-  <br>
+  <input id="password" type="password" name="password" placeholder="Password">
+  <br><br>
+  
+  <label for="email">Email</label>
+  <input id="email" type="email" name="email" placeholder="Email@email.com">
+
   {{#if message }}
     <div class="error-message">{{ message }}</div>
   {{/if}}
