[Core] Added map

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,8 +3,12 @@
   padding: 0; }
 
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
+
+#map {
+  margin: 5% auto;
+  height: 400px;
+  width: 600px; }
 
 a {
   color: #00B7FF; }
