--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -4,10 +4,13 @@
 }
 
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
-
+#map{
+  margin:5% auto;
+  height:400px;
+  width:600px;
+}
 a {
   color: #00B7FF;
 }
