[Geo] Added Markers, seeds

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,11 +13,17 @@
     crossorigin="anonymous"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD-14zbkzMo_3ZncJuml9B1VeZvzppB_qU"></script>
   <script src="/javascripts/map/geolocalize.js"></script>
+  <script>
+    
+  </script>
 </head>
 
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
     <a href="/">Home</a>
     <a href="/auth/login">Login</a>
     <a href="/auth/signup">Signup</a>
