[MAP] Filter markers by radius

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,9 @@
  
  
  <div id="map"></div>
+{{#each info}}
+
+{{/each}}
 <script>
-  window.wifi = {{{ wifiStr }}}
+  window.info = {{{ infoStr }}}
 </script>
