--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,9 +1,12 @@
- 
- 
+<div>
+  <input type="text" placeholder="Radio de Busqueda">
+</div>
+<div>
+  <input type="range" id="slide" min="500" max="5000" value="1000">
+  <span  class="slider_label">1000</span>
+</div>
  <div id="map"></div>
-{{#each info}}
-<p>{{createdAt}}</p>
-{{/each}}
+
 <script>
   window.info = {{{ infoStr }}}
 </script>
