--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,8 +10,141 @@ body {
   height: 400px;
   width: 600px; }
 
-.navbar-brand
-a {
-  color: #00B7FF; }
+.navbar-brand a {
+  color: #00b7ff; }
+
+.front-back {
+  background-image: url("../images/plazamayor.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh; }
+
+.title {
+  display: flex;
+  justify-content: center;
+  margin-top: 10%; }
+
+.img-logo h1,
+h2 {
+  float: right;
+  color: white;
+  width: 30%;
+  margin-right: 33%;
+  margin-top: 2%;
+  text-align: center; }
+
+.connec {
+  font-weight: bolder; }
+
+.click {
+  margin-left: 48%;
+  margin-top: -6%;
+  position: absolute;
+  font-size: 235%;
+  text-decoration: none;
+  color: red;
+  width: 9%;
+  text-align: center; }
+
+.click:hover {
+  text-decoration: none;
+  animation-play-state: paused;
+  color: red; }
+
+.img-logo img {
+  width: 26%;
+  margin-left: 8%; }
+
+.wifi-symbol {
+  display: none; }
+  .wifi-symbol [foo], .wifi-symbol {
+    display: block;
+    position: absolute;
+    top: 50%;
+    display: inline-block;
+    margin-left: 84%;
+    width: 150px;
+    height: 150px;
+    margin-top: -367.5px;
+    -ms-transform: rotate(-45deg) translate(-100px);
+    -moz-transform: rotate(-45deg) translate(-100px);
+    -o-transform: rotate(-45deg) translate(-100px);
+    -webkit-transform: rotate(-45deg) translate(-100px);
+    transform: rotate(-45deg) translate(-100px); }
+  .wifi-symbol .wifi-circle {
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    display: block;
+    width: 100%;
+    height: 100%;
+    font-size: 21.42857px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    border-color: white;
+    border-style: solid;
+    border-width: 1em 1em 0 0;
+    -webkit-border-radius: 0 100% 0 0;
+    border-radius: 0 100% 0 0;
+    opacity: 0;
+    -o-animation: wifianimation 2s infinite;
+    -moz-animation: wifianimation 2s infinite;
+    -webkit-animation: wifianimation 2s infinite;
+    animation: wifianimation 2s infinite; }
+    .wifi-symbol .wifi-circle.first {
+      -o-animation-delay: 800ms;
+      -moz-animation-delay: 800ms;
+      -webkit-animation-delay: 800ms;
+      animation-delay: 800ms; }
+    .wifi-symbol .wifi-circle.second {
+      width: 5em;
+      height: 5em;
+      -o-animation-delay: 400ms;
+      -moz-animation-delay: 400ms;
+      -webkit-animation-delay: 400ms;
+      animation-delay: 400ms; }
+    .wifi-symbol .wifi-circle.third {
+      width: 3em;
+      height: 3em; }
+    .wifi-symbol .wifi-circle.fourth {
+      width: 1em;
+      height: 1em;
+      opacity: 1;
+      background-color: white;
+      -o-animation: none;
+      -moz-animation: none;
+      -webkit-animation: none;
+      animation: none; }
+
+@-o-keyframes wifianimation {
+  0% {
+    opacity: 0.4; }
+  5% {
+    opactiy: 1; }
+  6% {
+    opactiy: 0.1; }
+  100% {
+    opactiy: 0.1; } }
+
+@-moz-keyframes wifianimation {
+  0% {
+    opacity: 0.4; }
+  5% {
+    opactiy: 1; }
+  6% {
+    opactiy: 0.1; }
+  100% {
+    opactiy: 0.1; } }
+
+@-webkit-keyframes wifianimation {
+  0% {
+    opacity: 0.4; }
+  5% {
+    opactiy: 1; }
+  6% {
+    opactiy: 0.1; }
+  100% {
+    opactiy: 0.1; } }
 
 /*# sourceMappingURL=style.css.map */
