[CSS]Changes on css

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -28,22 +28,28 @@ body {
   margin-top: 10%;
 }
 
+.img-logo img {
+  width: 40%;
+    margin-top: 2%;
+    margin-left: -15%;
+}
+
 .img-logo h1,
 h2 {
-  float: right;
   color: white;
-  width: 30%;
-  margin-right: 33%;
-  margin-top: 2%;
-  text-align: center;
+    width: 56%;
+    margin-left: 30%;
+    margin-top: -37%;
+    text-align: center;
+    font-size: 2vw;
 }
 .connec{
 font-weight: bolder;
 }
 
 .click {
-  margin-left: 48%;
-  margin-top: -6%;
+  margin-left: 52%;
+  margin-top: 2%;
   position: absolute;
   font-size: 235%;
   text-decoration: none;
@@ -56,10 +62,7 @@ font-weight: bolder;
   animation-play-state: paused;
   color: red;
 }
-.img-logo img {
-  width: 26%;
-  margin-left: 8%;
-}
+
 
 .wifi-symbol {
   display: none;
@@ -72,10 +75,10 @@ font-weight: bolder;
     position: absolute;
     top: 50%;
     display: inline-block;
-    margin-left: 84%;
+    margin-left: 103%;
     width: $size;
     height: $size;
-    margin-top: 0 - 330 - $size * 0.25;
+    margin-top: 0 - 220 - $size * 0.25;
 
     -ms-transform: rotate(-45deg) translate(-100px);
     -moz-transform: rotate(-45deg) translate(-100px);
