--- a/views/frontpage.hbs
+++ b/views/frontpage.hbs
@@ -1,16 +1,24 @@
 <div class="front-back">
+
+  <div class="container">
+  <div class="row">
+    <div class="col-sm">
 <div class="animated img-logo">
   <img src="./images/logomadsinfondo.png" alt="logo pic">
- 
-   <h2>What Is In Mad <br><br>The best way to find free Wifis in Madrid and stay always <span class="connec">Connected</span>.<br> Just in one</h2>
-   
-</div>
+ </div>
+ <div class="col-sm">
+      <h2>What Is In Mad? <br><br>The best way to find free Wifis in Madrid and stay always <span class="connec">Connected</span>.<br> Just in one</h2>
 <a href="/home" class="animated bounceInLeft click">Click!</a>
-<div class="wifi-symbol">
+ </div>
+     <div class="col-sm">
+       <div class="wifi-symbol">
   <div class="wifi-circle first"></div>
   <div class="wifi-circle second"></div>
   <div class="wifi-circle third"></div>	
   <div class="wifi-circle fourth">  
 </div>
-
 </div>
+</div>
+</div>
+</div>
+
