--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,21 +25,26 @@ body {
   justify-content: center;
   margin-top: 10%; }
 
+.img-logo img {
+  width: 40%;
+  margin-top: 2%;
+  margin-left: -15%; }
+
 .img-logo h1,
 h2 {
-  float: right;
   color: white;
-  width: 30%;
-  margin-right: 33%;
-  margin-top: 2%;
-  text-align: center; }
+  width: 56%;
+  margin-left: 30%;
+  margin-top: -37%;
+  text-align: center;
+  font-size: 2vw; }
 
 .connec {
   font-weight: bolder; }
 
 .click {
-  margin-left: 48%;
-  margin-top: -6%;
+  margin-left: 52%;
+  margin-top: 2%;
   position: absolute;
   font-size: 235%;
   text-decoration: none;
@@ -52,10 +57,6 @@ h2 {
   animation-play-state: paused;
   color: red; }
 
-.img-logo img {
-  width: 26%;
-  margin-left: 8%; }
-
 .wifi-symbol {
   display: none; }
   .wifi-symbol [foo], .wifi-symbol {
@@ -63,10 +64,10 @@ h2 {
     position: absolute;
     top: 50%;
     display: inline-block;
-    margin-left: 84%;
+    margin-left: 103%;
     width: 150px;
     height: 150px;
-    margin-top: -367.5px;
+    margin-top: -257.5px;
     -ms-transform: rotate(-45deg) translate(-100px);
     -moz-transform: rotate(-45deg) translate(-100px);
     -o-transform: rotate(-45deg) translate(-100px);
