--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  {{!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -33,7 +33,7 @@
     <a href="/auth/login">Login</a>
     <a href="/auth/signup">Signup</a>
     {{/if}}
-  </nav> --}}
+  </nav>
   {{{body}}}
 
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
