--- a/views/new.hbs
+++ b/views/new.hbs
@@ -1,3 +1,17 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    {{#if user}}
+    <a class="nav-item nav-link" href="/new">Add new Wifi</a>
+    <a href="/auth/logout">Logout</a>
+    {{else}}
+    <a href="/home">Home</a>
+    <a href="/auth/login">Login</a>
+    <a href="/auth/signup">Signup</a>
+    {{/if}}
+  </nav>
 <div class="new-wifi">
  <h2>Add a new Wifi</h2>
   <form method="POST" action="/new">
