--- a/views/frontpage.hbs
+++ b/views/frontpage.hbs
@@ -1,24 +1,51 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>{{title}}</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="/stylesheets/style.css" />
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-P4PlzQpJlQziEfMbyB0v2lWgv2mncBo&libraries=geometry,places"></script>
+  <script src="/javascripts/map/geolocalize.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
+</head>
+<body>
 <div class="front-back">
 
   <div class="container">
-  <div class="row">
-    <div class="col-sm">
-<div class="animated img-logo">
-  <img src="./images/logomadsinfondo.png" alt="logo pic">
- </div>
- <div class="col-sm">
-      <h2>What Is In Mad? <br><br>The best way to find free Wifis in Madrid and stay always <span class="connec">Connected</span>.<br> Just in one</h2>
-<a href="/home" class="animated bounceInLeft click">Click!</a>
- </div>
-     <div class="col-sm">
-       <div class="wifi-symbol">
-  <div class="wifi-circle first"></div>
-  <div class="wifi-circle second"></div>
-  <div class="wifi-circle third"></div>	
-  <div class="wifi-circle fourth">  
-</div>
-</div>
-</div>
-</div>
-</div>
+    <div class="row">
+      <div class="col-sm">
+        <div class="animated img-logo">
+          <img src="./images/logomadsinfondo.png" alt="logo pic">
+        </div>
+        <div class="col-sm">
+          <h2>What Is In Mad? <br><br>The best way to find free Wifis in Madrid and stay always <span class="connec">Connected</span>.<br>
+            Just in one</h2>
+          <a href="/home" class="animated bounceInLeft click">Click!</a>
+        </div>
+        <div class="col-sm">
+          <div class="wifi-symbol">
+            <div class="wifi-circle first"></div>
+            <div class="wifi-circle second"></div>
+            <div class="wifi-circle third"></div>
+            <div class="wifi-circle fourth">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  crossorigin="anonymous"></script>
+</body>
 
+</html>
