--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,16 +1,12 @@
-
-
+<div class="index-back">
 <div>
-  <input type="text" placeholder="Radio de Busqueda">
-</div>
-<div>
-  <input type="range" id="slide" min="500" max="40000" value="1000">
+  <input type="range" id="slide" min="500" max="5000" value="1000">
   <span  class="slider_label">1000</span>
 </div>
  <div id="map"></div>
+ </div>
 
 <script>
   window.info = {{{ infoStr }}}
-  window.data ={{{ dataStr }}}
 </script>
 
