--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,9 +6,9 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
 #map {
-  margin: 5% auto;
-  height: 400px;
-  width: 600px; }
+  margin: 3% auto;
+  height: 70%;
+  width: 70%; }
 
 .navbar-brand a {
   color: #00b7ff; }
@@ -20,6 +20,12 @@ body {
   width: 100vw;
   height: 100vh; }
 
+.index-back {
+  background-color: #c6c3c375;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh; }
+
 .title {
   display: flex;
   justify-content: center;
@@ -27,15 +33,15 @@ body {
 
 .img-logo img {
   width: 40%;
-  margin-top: 2%;
-  margin-left: -15%; }
+  margin-top: 21%;
+  margin-left: -17%; }
 
 .img-logo h1,
 h2 {
-  color: white;
+  color: black;
   width: 56%;
   margin-left: 30%;
-  margin-top: -37%;
+  margin-top: -31%;
   text-align: center;
   font-size: 2vw; }
 
@@ -83,7 +89,7 @@ h2 {
     position: absolute;
     bottom: 0;
     left: 0;
-    border-color: white;
+    border-color: black;
     border-style: solid;
     border-width: 1em 1em 0 0;
     -webkit-border-radius: 0 100% 0 0;
@@ -112,7 +118,7 @@ h2 {
       width: 1em;
       height: 1em;
       opacity: 1;
-      background-color: white;
+      background-color: black;
       -o-animation: none;
       -moz-animation: none;
       -webkit-animation: none;
