--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -66,6 +66,7 @@ h2 {
 .row-first{
   width: 28%;
   margin-top: 4%;
+  animation: showUp 0.5s cubic-bezier(0.18, 1.3, 1, 1) forwards;
 }
 .click {
   margin-left: 35%;
@@ -86,10 +87,64 @@ img {
   width: 50%;
 }
 
+.img-signup{
+  width: 40%;
+  margin-left: 28%; 
+}
+
 .logo-login {
   width: 20%;
   margin-top: 32%;
   margin-left: 27%;
+}
+.choose{
+  text-align: center;
+  font-size: 30px;
+  padding-bottom: 10px;
+}
+.bar-circle{
+  padding-top: 1%;
+    width: 70%;
+    margin-left: 15%;
+}
+h3{
+  text-align: center;
+}
+.container2 {
+  background: white;
+    padding: 20px 25px;
+    /* border: 5px solid #26a69a; */
+    width: 550px;
+    height: auto;
+    box-sizing: border-box;
+    position: relative;
+    margin-left: 35%;
+    margin-top: 4%;
+}
+.col.s6 > .btn {
+   width: 100%;
+}
+radio:required {
+  border-color: red;
+}
+.container2 {
+  animation: showUp 0.5s cubic-bezier(0.18, 1.3, 1, 1) forwards;
+}
+
+@keyframes showUp {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transoform: scale(1);
+  }
+}
+.row2 {margin-bottom: 10px;}
+
+.ngl {
+  position: absolute;
+  top: -20px;
+  right: -20px;
 }
 
 .cyan {
