--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,11 @@
 <div class="index-back">
-<div>
-  <input type="range" id="slide" min="500" max="5000" value="1000">
-  <span  class="slider_label">1000</span>
-</div>
+  <form class="bar-circle">
+      <p class="choose">Choose the size of the radius:</p>
+    <p class="range-field">
+      <input type="range" id="slide" min="500" max="5000" value="1000" />
+    </p>
+  </form>
+
  <div id="map"></div>
  </div>
 
