--- a/views/new.hbs
+++ b/views/new.hbs
@@ -1,24 +1,11 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    {{#if user}}
-    <a class="nav-item nav-link" href="/new">Add new Wifi</a>
-    <a href="/auth/logout">Logout</a>
-    {{else}}
-    <a href="/home">Home</a>
-    <a href="/auth/login">Login</a>
-    <a href="/auth/signup">Signup</a>
-    {{/if}}
-  </nav>
+
   <form method="POST" action="/new">
-  {{!-- Dropdown menu --}}
+  <h3>Did you find a new Wifi?</h3>
+    <h3>Help Users: Point it on the map and add the new Wifi to our Data Base</h3>
     <input  class="name-input"type="text" name="name" placeholder="name">
       
-    {{!-- hidden lat lng pos when clicked on map --}}
-    <input id="lat-pos"  name="latitude">
-    <input id="lng-pos"  name="longitude">
+    <input type="hidden" id="lat-pos"  name="latitude">
+    <input type="hidden" id="lng-pos"  name="longitude">
     <input class="btn btn-primary" type="submit" value="Add">
   </form>
   <div id="map-user"></div>
