--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -7,16 +7,12 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   max-width: 100%;
 }
-#map {
+#map,#map-user {
   margin: 3% auto;
   height: 70%;
   width: 70%;
 }
-#map-user {
-  margin: 5% auto;
-  height: 400px;
-  width: 600px;
-}
+
 .navbar-brand a {
   color: #00b7ff;
 }
@@ -139,8 +135,12 @@ radio:required {
     transoform: scale(1);
   }
 }
-.row2 {margin-bottom: 10px;}
-
+.row2 {
+  margin-bottom: 10px;
+}
+.row3{
+  margin-left: 35%;
+}
 .ngl {
   position: absolute;
   top: -20px;
