--- a/views/userswifi.hbs
+++ b/views/userswifi.hbs
@@ -1,11 +1,12 @@
-<a href="/home">Volver a Maps Oficiales</a>
-<div>
-  <input type="text" placeholder="Radio de Busqueda">
-</div>
-<div>
-  <input type="range" id="slide-user" min="500" max="5000" value="1000">
-  <span  class="slider_label">1000</span>
-</div>
+
+<div class="index-back">
+  <form class="bar-circle">
+      <p class="choose">Choose the size of the radius:</p>
+    <p class="range-field">
+      <input type="range" id="slide-user" min="500" max="5000" value="1000" />
+    </p>
+  </form>
+ </div>
  <div id="map-user"></div>
 
 <script>
