--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -7,13 +7,16 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   max-width: 100%;
 }
-#map,#map-user {
+#map {
   margin: 3% auto;
   height: 70%;
   width: 70%;
 }
-
-
+#map-user {
+  margin: 5% auto;
+  height: 400px;
+  width: 600px;
+}
 .navbar-brand a {
   color: #00b7ff;
 }
@@ -136,12 +139,8 @@ radio:required {
     transoform: scale(1);
   }
 }
-.row2 {
-  margin-bottom: 10px;
-}
-.row3{
-  margin-left: 35%;
-}
+.row2 {margin-bottom: 10px;}
+
 .ngl {
   position: absolute;
   top: -20px;
