--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -26,7 +26,7 @@
             <label for="password">Password</label>
           </div>
         </div>
-        <div class="row3">
+        <div class="row">
           <div class="input-field col s12">
             <button class="btn btn-large btn-register waves-effect waves-light" type="submit">Log In
             <i class="material-icons right">done</i>
