--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,10 +6,29 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   max-width: 100%; }
 
-#map, #map-user {
+#map {
   margin: 3% auto;
   height: 70%;
   width: 70%; }
+
+#map-user {
+  margin: 3% auto;
+  height: 555px;
+  width: 1220px; }
+
+#new-input {
+  width: 20%;
+  margin-left: 17%; }
+
+.a-users {
+  margin-left: 10%; }
+
+.button-new {
+  display: flex;
+  flex-direction: column;
+  width: 5%;
+  margin-left: 17%;
+  text-align: center; }
 
 .navbar-brand a {
   color: #00b7ff; }
@@ -100,7 +119,6 @@ h3 {
 .container2 {
   background: white;
   padding: 20px 25px;
-  /* border: 5px solid #26a69a; */
   width: 550px;
   height: auto;
   box-sizing: border-box;
