--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -7,10 +7,30 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   max-width: 100%;
 }
-#map,#map-user {
+#map {
   margin: 3% auto;
   height: 70%;
   width: 70%;
+}
+#map-user {
+  margin: 3% auto;
+  height: 555px;
+  width: 1220px;
+}
+
+#new-input {
+  width: 20%;
+  margin-left: 17%;
+}
+.a-users{
+  margin-left: 10%;
+}
+.button-new {
+  display: flex;
+  flex-direction: column;
+  width: 5%;
+  margin-left: 17%;
+  text-align: center;
 }
 
 .navbar-brand a {
@@ -56,10 +76,10 @@ h2 {
 .connec {
   font-weight: bolder;
 }
-.card-panel{
+.card-panel {
   height: 70vh;
 }
-.row-first{
+.row-first {
   width: 28%;
   margin-top: 4%;
   animation: showUp 0.5s cubic-bezier(0.18, 1.3, 1, 1) forwards;
@@ -83,9 +103,9 @@ img {
   width: 50%;
 }
 
-.img-signup{
+.img-signup {
   width: 40%;
-  margin-left: 28%; 
+  margin-left: 28%;
 }
 
 .logo-login {
@@ -93,32 +113,31 @@ img {
   margin-top: 32%;
   margin-left: 27%;
 }
-.choose{
+.choose {
   text-align: center;
   font-size: 30px;
   padding-bottom: 10px;
 }
-.bar-circle{
+.bar-circle {
   padding-top: 1%;
-    width: 70%;
-    margin-left: 15%;
+  width: 70%;
+  margin-left: 15%;
 }
-h3{
+h3 {
   text-align: center;
 }
 .container2 {
   background: white;
-    padding: 20px 25px;
-    /* border: 5px solid #26a69a; */
-    width: 550px;
-    height: auto;
-    box-sizing: border-box;
-    position: relative;
-    margin-left: 35%;
-    margin-top: 4%;
+  padding: 20px 25px;
+  width: 550px;
+  height: auto;
+  box-sizing: border-box;
+  position: relative;
+  margin-left: 35%;
+  margin-top: 4%;
 }
 .col.s6 > .btn {
-   width: 100%;
+  width: 100%;
 }
 radio:required {
   border-color: red;
@@ -138,7 +157,7 @@ radio:required {
 .row2 {
   margin-bottom: 10px;
 }
-.row3{
+.row3 {
   margin-left: 35%;
 }
 .ngl {
