--- a/views/userswifi.hbs
+++ b/views/userswifi.hbs
@@ -1,15 +1,10 @@
 <div class="index-back">  <form class="bar-circle">
-  <a href="/home">Volver a Maps Oficiales</a>
+  <blockquote><a class="a-users" href="/home">Volver a Maps Oficiales</a></blockquote>
       <p class="choose">Choose the size of the radius:</p>
     <p class="range-field">
       <input type="range" id="slide" min="500" max="5000" value="1000" />
     </p>
   </form>
-{{!-- <a href="/home">Volver a Maps Oficiales</a>
-<div>
-  <input type="range" id="slide-user" min="500" max="5000" value="1000">
-  <span  class="slider_label">1000</span>
-</div> --}}
  <div id="map-user"></div>
 </div>
 <script>
