--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -22,8 +22,10 @@ body {
   width: 20%;
   margin-left: 17%;
 }
-.a-users{
-  margin-left: 10%;
+.a-users {
+  margin-left: -14%;
+  text-decoration: none;
+  color: #ed6e73;
 }
 .button-new {
   display: flex;
