--- a/views/frontpage.hbs
+++ b/views/frontpage.hbs
@@ -28,7 +28,7 @@
         <div class="col-sm">
           <h2>What Is In Mad? <br><br>The best way to find free Wifis in Madrid and stay always <span class="connec">Connected</span>.<br>
             Just in one</h2>
-          <a href="/home" class="animated bounceInLeft click">Click!</a>
+          <a href="/home" class="animated swing infinite click">Click!</a>
         </div>
         <div class="col-sm">
           <div class="wifi-symbol">
