--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,6 @@
 <div class="index-back">
   <form class="bar-circle">
+    <h3>Madrid Free Wifis</h3>
       <p class="choose">Choose the size of the radius:</p>
     <p class="range-field">
       <input type="range" id="slide" min="500" max="5000" value="1000" />
