--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-  <nav>
+  <nav class="text-ul">
     <div class="nav-wrapper">
       <ul id="nav-mobile" class="left hide-on-med-and-down">
         <li><a href="/home">Home</a></li>
@@ -34,7 +34,7 @@
         <li><a href="/auth/signup">Sign Up</a></li>
         {{/if}}
       </ul>
-      {{!-- <img src="/images/logomad.png" class="logo-login" alt=""> --}}
+      <img src="/images/logomad.png" class="logo-login" alt="logo mad">
     </div>
   </nav>
 
