--- a/public/stylesheets/login.scss
+++ b/public/stylesheets/login.scss
@@ -44,6 +44,15 @@ radio:required {
   animation: showUp 0.5s cubic-bezier(0.18, 1.3, 1, 1) forwards;
 }
 
+.cyan{
+  background-color: white !important
+}
+
+.log-in{
+  width: 37%;
+  margin-left: 32%;
+}
+
 @keyframes showUp {
   0% {
     transform: scale(0);
@@ -64,6 +73,3 @@ radio:required {
   right: -20px;
 }
 
-.cyan {
-  background-color: #00bfd46e !important;
-}
