--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -104,6 +104,69 @@
   100% {
     opactiy: 0.1; } }
 
+h3 {
+  text-align: center; }
+
+.logo-login {
+  width: 3.5%;
+  margin-top: 0.2%;
+  margin-left: 67%; }
+
+.card-panel {
+  height: 70vh; }
+
+.img-signup {
+  width: 40%;
+  margin-left: 28%; }
+
+.row-first {
+  width: 28%;
+  margin-top: 4%;
+  animation: showUp 0.5s cubic-bezier(0.18, 1.3, 1, 1) forwards; }
+
+.container2 {
+  background: white;
+  padding: 20px 25px;
+  width: 550px;
+  height: auto;
+  box-sizing: border-box;
+  position: relative;
+  margin-left: 35%;
+  margin-top: 4%; }
+
+.col.s6 > .btn {
+  width: 100%; }
+
+radio:required {
+  border-color: red; }
+
+.container2 {
+  animation: showUp 0.5s cubic-bezier(0.18, 1.3, 1, 1) forwards; }
+
+.cyan {
+  background-color: white !important; }
+
+.log-in {
+  width: 37%;
+  margin-left: 32%; }
+
+@keyframes showUp {
+  0% {
+    transform: scale(0); }
+  100% {
+    transoform: scale(1); } }
+
+.row2 {
+  margin-bottom: 10px; }
+
+.row3 {
+  margin-left: 35%; }
+
+.ngl {
+  position: absolute;
+  top: -20px;
+  right: -20px; }
+
 * {
   margin: 0;
   padding: 0; }
@@ -179,25 +242,8 @@ h2 {
 .connec {
   font-weight: bolder; }
 
-.card-panel {
-  height: 70vh; }
-
-.row-first {
-  width: 28%;
-  margin-top: 4%;
-  animation: showUp 0.5s cubic-bezier(0.18, 1.3, 1, 1) forwards; }
-
 img {
   width: 50%; }
-
-.img-signup {
-  width: 40%;
-  margin-left: 28%; }
-
-.logo-login {
-  width: 3.5%;
-  margin-top: 0.2%;
-  margin-left: 67%; }
 
 .choose {
   text-align: center;
@@ -208,47 +254,5 @@ img {
   padding-top: 1%;
   width: 70%;
   margin-left: 15%; }
-
-h3 {
-  text-align: center; }
-
-.container2 {
-  background: white;
-  padding: 20px 25px;
-  width: 550px;
-  height: auto;
-  box-sizing: border-box;
-  position: relative;
-  margin-left: 35%;
-  margin-top: 4%; }
-
-.col.s6 > .btn {
-  width: 100%; }
-
-radio:required {
-  border-color: red; }
-
-.container2 {
-  animation: showUp 0.5s cubic-bezier(0.18, 1.3, 1, 1) forwards; }
-
-@keyframes showUp {
-  0% {
-    transform: scale(0); }
-  100% {
-    transoform: scale(1); } }
-
-.row2 {
-  margin-bottom: 10px; }
-
-.row3 {
-  margin-left: 35%; }
-
-.ngl {
-  position: absolute;
-  top: -20px;
-  right: -20px; }
-
-.cyan {
-  background-color: #00bfd46e !important; }
 
 /*# sourceMappingURL=style.css.map */
