--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -28,7 +28,7 @@
         </div>
         <div class="row">
           <div class="input-field col s12">
-            <button class="btn btn-large btn-register waves-effect waves-light" type="submit">Log In
+            <button class="btn btn-large btn-register waves-effect waves-light button log-in" type="submit">Log In
             <i class="material-icons right">done</i>
           </button>
           </div>
