--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,5 +1,5 @@
 <div class="container2">
-  <div class="row2">
+  <div class="row2 card-panel z-depth-4">
     <img src="/images/logomadsinfondo.png" alt="" class="circle responsive-img valign profile-image-login img-signup">
 
     <h3>Join Us To Keep The Wifi Free</h3>
