--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,6 +10,15 @@
  <div id="map"></div>
  </div>
 
+<footer class="page-footer">
+    <div class="container">
+      <strong id="span-footer">Made by <a href="https://github.com/TeoDiaz">Teo Diaz</a> & 
+      <a href="https://github.com/chrislopez24">Chris Lopez</a>
+      <a class="grey-text text-lighten-4 right" href="https://github.com/WhatsInMad/whats-in-mad">Github</a>    
+        </strong>
+    </div>
+  </footer>
+
 <script>
   window.info = {{{ infoStr }}}
 </script>
