--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -109,8 +109,9 @@ h3 {
 
 .logo-login {
   width: 3.5%;
-  margin-top: 0.2%;
-  margin-left: 67%; }
+  margin-top: -3.3%;
+  margin-left: 94%;
+  position: absolute; }
 
 .card-panel {
   height: 70vh; }
@@ -121,18 +122,18 @@ h3 {
 
 .row-first {
   width: 28%;
-  margin-top: 4%;
+  margin-top: 2%;
   animation: showUp 0.5s cubic-bezier(0.18, 1.3, 1, 1) forwards; }
 
 .container2 {
   background: white;
-  padding: 20px 25px;
+  padding: 1px 25px;
   width: 550px;
   height: auto;
   box-sizing: border-box;
   position: relative;
   margin-left: 35%;
-  margin-top: 4%; }
+  margin-top: 3%; }
 
 .col.s6 > .btn {
   width: 100%; }
@@ -156,9 +157,6 @@ radio:required {
   100% {
     transoform: scale(1); } }
 
-.row2 {
-  margin-bottom: 10px; }
-
 .row3 {
   margin-left: 35%; }
 
@@ -177,7 +175,8 @@ body {
 
 .page-footer {
   padding: 15px;
-  width: 100%; }
+  width: 100%;
+  margin-top: -3%; }
 
 #map {
   margin: 1% auto;
