--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -34,21 +34,14 @@
         <li><a href="/auth/signup">Sign Up</a></li>
         {{/if}}
       </ul>
-      <img src="/images/logomad.png" class="logo-login" alt="logo mad">
     </div>
   </nav>
-
+<div>
+   <img src="/images/logomad.png" class="logo-login" alt="logo mad">
+</div>
   {{{body}}}
 
-  <footer class="page-footer">
-    <div class="container">
-      <strong id="span-footer">Made by <a href="https://github.com/TeoDiaz">Teo Diaz</a> & 
-      <a href="https://github.com/chrislopez24">Chris Lopez</a>
-      <a class="grey-text text-lighten-4 right" href="https://github.com/WhatsInMad/whats-in-mad">Github</a>    
-        </strong>
-    </div>
-  </footer>
-
+  
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
