--- a/views/new.hbs
+++ b/views/new.hbs
@@ -8,6 +8,7 @@
     <input type="hidden" id="lng-pos"  name="longitude" required>
     <input class="btn btn-primary button-new" type="submit" value="Add Wifi">
   </form>
+  <p>{{error}}</p>
 
   <div id="map-user"></div>
 </div>
